# bedrock_client

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/client/: __init__.py  bedrock_client.py
app/routers/: __init__.py  bedrock.py
